A bit of cleanup
honestly not enough lol